webpack: remove filemanager-webpack-plugin
Replace it with copy-webpack-plugin.
filemanager-webpack-plugin NPM package has not been updated in 2 years,
and NPM reports a vulnerability in its transitive dependency "braces".

    │ Low           │ Regular Expression Denial of Service                         │
    ├───────────────┼──────────────────────────────────────────────────────────────┤
    │ Package       │ braces                                                       │
    ├───────────────┼──────────────────────────────────────────────────────────────┤
    │ Patched in    │ >=2.3.1                                                      │
    ├───────────────┼──────────────────────────────────────────────────────────────┤
    │ Dependency of │ filemanager-webpack-plugin [dev]                             │
    ├───────────────┼──────────────────────────────────────────────────────────────┤
    │ Path          │ filemanager-webpack-plugin > cpx > chokidar > anymatch >     │
    │               │ micromatch > braces                                          │
    ├───────────────┼──────────────────────────────────────────────────────────────┤
    │ More info     │ https://npmjs.com/advisories/786

--- a/package.json
+++ b/package.json
@@ -1420,12 +1420,12 @@
         "@typescript-eslint/eslint-plugin-tslint": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "circular-dependency-plugin": "^5.2.0",
+        "copy-webpack-plugin": "^6.2.0",
         "decache": "^4.4.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-header": "^3.0.0",
         "eslint-plugin-no-null": "^1.0.2",
-        "filemanager-webpack-plugin": "^2.0.5",
         "glob": "^7.1.4",
         "husky": "^2.3.0",
         "istanbul": "^0.4.5",
